--- a/FACTOVA_QueryHelper.csproj
+++ b/FACTOVA_QueryHelper.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.0.5" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0" />
     <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="23.26.0" />
     <PackageReference Include="System.Management" Version="8.0.0" />
   </ItemGroup>
@@ -27,6 +28,7 @@
 
   <ItemGroup>
     <Folder Include="ExampleExcel\" />
+    <Folder Include="Windows\" />
   </ItemGroup>
 
 </Project>
