--- a/FACTOVA_QueryHelper.csproj
+++ b/FACTOVA_QueryHelper.csproj
@@ -7,6 +7,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Icons\free-icon-database-4248443.ico</ApplicationIcon>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <Company>FACTOVA</Company>
+    <Product>FACTOVA Query Helper</Product>
+    <Description>Oracle 데이터베이스 쿼리 실행 및 모니터링 도구</Description>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,6 +35,10 @@
   <ItemGroup>
     <Folder Include="ExampleExcel\" />
     <Folder Include="Windows\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include=".github\workflows\release.yml" />
   </ItemGroup>
 
 </Project>
