--- a/FACTOVA_QueryHelper.csproj
+++ b/FACTOVA_QueryHelper.csproj
@@ -13,6 +13,7 @@
     <Company>FACTOVA</Company>
     <Product>FACTOVA Query Helper</Product>
     <Description>Oracle 데이터베이스 쿼리 실행 및 모니터링 도구</Description>
+    <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,6 +32,7 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0" />
     <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="23.26.0" />
     <PackageReference Include="System.Management" Version="8.0.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
